<resources>
    <string name="app_name">Hadits Ku</string>
    <string name="favorite_hadits">Favorite Hadits</string>
    <string name="_1_isi_hadits">1. Isi Hadits</string>
    <string name="shahih_al_bukhari">(Shahih Al-Bukhari)</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="membuat_akun">Membuat Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>