<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/buatakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/membuat_akun"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/layoutuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_username" />

                <EditText
                    android:id="@+id/username_registrasi"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/layoutpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_key"
                    android:contentDescription="TODO" />

                <EditText
                    android:id="@+id/password_registrasi"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_user"
                    android:contentDescription="TODO" />

                <EditText
                    android:id="@+id/first_name_registrasi"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/nama_depan"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/nambel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_user"
                    android:contentDescription="TODO" />

                <EditText
                    android:id="@+id/last_name_registrasi"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/nama_belakang"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_registrasi_user"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            android:background="@color/colorPrimary"
            android:text="@string/daftar"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/masuk"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>